--- a/index.html
+++ b/index.html
@@ -1071,7 +1071,7 @@ The title of the table is the name of your system, the three columns contain the
 </div>
 <div class="imageblock">
 <div class="content">
-<img src="./images/diag-plantuml-md5-b755d04eee747f5828040a7374cec622.png" alt="Diagram" width="494" height="286">
+<img src="./images/diag-plantuml-md5-b755d04eee747f5828040a7374cec622.png" alt="Diagram" width="748" height="638">
 </div>
 </div>
 <table class="tableblock frame-all grid-all stretch">
@@ -1137,7 +1137,7 @@ together with a mapping table showing the relationships between channels and inp
 </div>
 <div class="imageblock">
 <div class="content">
-<img src="./images/diag-plantuml-md5-07608493dd9d33ee25ec89a0d88a0043.png" alt="Diagram" width="482" height="225">
+<img src="./images/diag-plantuml-md5-07608493dd9d33ee25ec89a0d88a0043.png" alt="Diagram" width="711" height="638">
 </div>
 </div>
 <table class="tableblock frame-all grid-all stretch">
@@ -1517,7 +1517,7 @@ Leave out normal, simple, boring or standardized parts of your system</p>
 </div>
 <div class="imageblock">
 <div class="content">
-<img src="./images/diag-plantuml-md5-777b31d4d304c57df3fd498ef2c1626c.png" alt="Diagram" width="391" height="207">
+<img src="./images/diag-plantuml-md5-777b31d4d304c57df3fd498ef2c1626c.png" alt="Diagram" width="712" height="638">
 </div>
 </div>
 <table class="tableblock frame-all grid-all stretch">
@@ -1562,7 +1562,7 @@ part of arc42 for additional levels.</p>
 </div>
 <div class="imageblock">
 <div class="content">
-<img src="./images/diag-plantuml-md5-b6fabd668253df644be645491413a81e.png" alt="Diagram" width="685" height="515">
+<img src="./images/diag-plantuml-md5-b6fabd668253df644be645491413a81e.png" alt="Diagram" width="698" height="638">
 </div>
 </div>
 <table class="tableblock frame-all grid-all stretch">
@@ -1819,7 +1819,7 @@ when your infrastructure is more complex.</p>
 </div>
 <div class="imageblock">
 <div class="content">
-<img src="./images/Deployment-View.png" alt="Deployment View" width="825" height="1011">
+<img src="./images/Deployment-View.png" alt="Deployment View" width="715" height="638">
 </div>
 </div>
 <div class="dlist">
@@ -2132,6 +2132,64 @@ concrete and measurable.</p>
 </div>
 </div>
 </div>
+<div class="paragraph">
+<p>The Quality Tree is a structured representation of the key quality attributes of our system. The root represents the overall concept of "Quality," which is then divided into different branches representing essential quality attributes derived from our Quality Goals (section 1.2). Each branch further expands into measurable and concrete evaluation scenarios.</p>
+</div>
+<div class="paragraph">
+<p>Below is an outline of the Quality Tree:</p>
+</div>
+<div class="ulist">
+<ul>
+<li>
+<p><strong>Quality</strong></p>
+</li>
+<li>
+<p><strong>Testability</strong></p>
+</li>
+<li>
+<p>Maintain at least 85% code coverage.</p>
+</li>
+<li>
+<p>Implement automated testing for all major functionalities.</p>
+</li>
+<li>
+<p><strong>Usability</strong></p>
+</li>
+<li>
+<p>Ensure an intuitive user interface suitable for all age groups.</p>
+</li>
+<li>
+<p>Conduct usability tests with different user demographics.</p>
+</li>
+<li>
+<p><strong>Portability</strong></p>
+</li>
+<li>
+<p>Deploy the application on various devices with minimal performance impact.</p>
+</li>
+<li>
+<p><strong>Security &amp; Privacy</strong></p>
+</li>
+<li>
+<p>Restrict user data access to authorized individuals.</p>
+</li>
+<li>
+<p>Implement secure authentication mechanisms.</p>
+</li>
+<li>
+<p><strong>Performance</strong></p>
+</li>
+<li>
+<p>Maintain consistent response times regardless of concurrent users.</p>
+</li>
+<li>
+<p>Perform load testing to simulate heavy traffic conditions.</p>
+</li>
+</ul>
+</div>
+<div class="paragraph">
+<p>Each of these categories will have detailed scenarios describing expected system behavior under different conditions.</p>
+</div>
 </div>
 <div class="sect2">
 <h3 id="_quality_scenarios">10.2. Quality Scenarios</h3>
@@ -2173,7 +2231,76 @@ more precisely down to a level of scenarios that can be discussed and evaluated.
 </div>
 </div>
 </div>
+<div class="sect3">
+<h4 id="_usage_scenarios">10.2.1. Usage Scenarios</h4>
+<table class="tableblock frame-all grid-all stretch">
+<colgroup>
+<col style="width: 50%;">
+<col style="width: 50%;">
+</colgroup>
+<tbody>
+<tr>
+<td class="tableblock halign-left valign-top"><p class="tableblock">Scenario ID</p></td>
+<td class="tableblock halign-left valign-top"><p class="tableblock">Scenario Description</p></td>
+</tr>
+<tr>
+<td class="tableblock halign-left valign-top"><p class="tableblock">UQ-01</p></td>
+<td class="tableblock halign-left valign-top"><p class="tableblock">A user selects an answer, and the system provides feedback within one second.</p></td>
+</tr>
+<tr>
+<td class="tableblock halign-left valign-top"><p class="tableblock">UQ-02</p></td>
+<td class="tableblock halign-left valign-top"><p class="tableblock">A user requests a hint, and the AI assistant provides contextual guidance without revealing the answer.</p></td>
+</tr>
+<tr>
+<td class="tableblock halign-left valign-top"><p class="tableblock">UQ-03</p></td>
+<td class="tableblock halign-left valign-top"><p class="tableblock">The application maintains stable response times (under 500ms per request) even with 100 concurrent users.</p></td>
+</tr>
+<tr>
+<td class="tableblock halign-left valign-top"><p class="tableblock">UQ-04</p></td>
+<td class="tableblock halign-left valign-top"><p class="tableblock">A new user navigates the application for the first time and completes a game without requiring external guidance.</p></td>
+</tr>
+<tr>
+<td class="tableblock halign-left valign-top"><p class="tableblock">UQ-05</p></td>
+<td class="tableblock halign-left valign-top"><p class="tableblock">A request to fetch a new question returns a response from the database within 300ms.</p></td>
+</tr>
+</tbody>
+</table>
+</div>
+<div class="sect3">
+<h4 id="_change_scenarios">10.2.2. Change Scenarios</h4>
+<table class="tableblock frame-all grid-all stretch">
+<colgroup>
+<col style="width: 50%;">
+<col style="width: 50%;">
+</colgroup>
+<tbody>
+<tr>
+<td class="tableblock halign-left valign-top"><p class="tableblock">Scenario ID</p></td>
+<td class="tableblock halign-left valign-top"><p class="tableblock">Scenario Description</p></td>
+</tr>
+<tr>
+<td class="tableblock halign-left valign-top"><p class="tableblock">CQ-01</p></td>
+<td class="tableblock halign-left valign-top"><p class="tableblock">Integration of a new LLM model should not degrade performance beyond a 10% increase in response time.</p></td>
+</tr>
+<tr>
+<td class="tableblock halign-left valign-top"><p class="tableblock">CQ-02</p></td>
+<td class="tableblock halign-left valign-top"><p class="tableblock">Adding a new game mode should not require modifications to more than 10% of the existing codebase.</p></td>
+</tr>
+<tr>
+<td class="tableblock halign-left valign-top"><p class="tableblock">CQ-03</p></td>
+<td class="tableblock halign-left valign-top"><p class="tableblock">Migrating the database to a new provider should require only configuration changes without altering business logic.</p></td>
+</tr>
+<tr>
+<td class="tableblock halign-left valign-top"><p class="tableblock">CQ-04</p></td>
+<td class="tableblock halign-left valign-top"><p class="tableblock">Enhancing security policies should not introduce more than 5% additional latency per request.</p></td>
+</tr>
+</tbody>
+</table>
+<div class="paragraph">
+<p>By defining these scenarios, we ensure that our system meets stakeholder expectations and maintains high-quality standards throughout its lifecycle.</p>
+</div>
 <div style="page-break-after: always;"></div>
+</div>
 </div>
 </div>
 </div>
@@ -2336,7 +2463,7 @@ more precisely down to a level of scenarios that can be discussed and evaluated.
 <div id="footer">
 <div id="footer-text">
 Version 8.2 EN<br>
-Last updated 2025-03-20 11:40:30 +0100
+Last updated 2025-03-18 16:56:54 +0100
 </div>
 </div>
 </body>
