--- a/index.html
+++ b/index.html
@@ -1570,7 +1570,7 @@ part of arc42 for additional levels.</p>
 </div>
 <div class="imageblock">
 <div class="content">
-<img src="./images/diag-plantuml-md5-b6fabd668253df644be645491413a81e.png" alt="Diagram" width="685" height="515">
+<img src="./images/diag-plantuml-md5-435df509a63ec01d3a038b97f5637ef5.png" alt="Diagram" width="981" height="515">
 </div>
 </div>
 <table class="tableblock frame-all grid-all stretch">
@@ -1588,6 +1588,10 @@ part of arc42 for additional levels.</p>
 <tr>
 <td class="tableblock halign-left valign-top"><p class="tableblock"><strong>Authentication Service</strong></p></td>
 <td class="tableblock halign-left valign-top"><p class="tableblock">Handles user authentication, login and signup.</p></td>
+</tr>
+<tr>
+<td class="tableblock halign-left valign-top"><p class="tableblock"><strong>User Service</strong></p></td>
+<td class="tableblock halign-left valign-top"><p class="tableblock">Retrieves the data of the users as well as their stadistics to generate the ranking.</p></td>
 </tr>
 <tr>
 <td class="tableblock halign-left valign-top"><p class="tableblock"><strong>Game Service</strong></p></td>
@@ -1827,7 +1831,7 @@ when your infrastructure is more complex.</p>
 </div>
 <div class="imageblock">
 <div class="content">
-<img src="./images/Deployment-View.png" alt="Deployment View" width="1097" height="1085">
+<img src="./images/Deployment-View.png" alt="Deployment View" width="1097" height="936">
 </div>
 </div>
 <div class="dlist">
